--- a/Experiments/Node/Forms with Node backend/frontend/index.html
+++ b/Experiments/Node/Forms with Node backend/frontend/index.html
@@ -51,13 +51,14 @@
   </head>
   <body>
     <form method="post" action="https://backend.zacaree.now.sh">
-      <input type="text" name="name" />
-      <input type="text" name="subscribedToChannel" />
-      <button type="submit">Add subscriber</button>
+      <input type="text" name="firstName" placeholder="First name" />
+      <input type="text" name="lastName" placeholder="Last name" />
+      <input type="text" name="email" placeholder="Email" />
+      <button type="submit">Add user</button>
     </form>
 
     <form method="get" action="https://backend.zacaree.now.sh">
-      <button type="submit">Get all subscribers</button>
+      <button type="submit">Get all users</button>
     </form>
   </body>
 </html>
