dom traversal exercise

--- a/Courses/Wes Bos/Beginner Javascript/my-progress/index.html
+++ b/Courses/Wes Bos/Beginner Javascript/my-progress/index.html
@@ -35,6 +35,7 @@
     <a href="./026_injecting-html_01.html">Injecting HTML</a>
     <a href="./026_injecting-html_02.html">createRange() & createContextualFragment()</a>
     <a href="./026_injecting-html_03.html">XSS attacks!</a>
+    <a href="./027_dom-traversal.html">DOM Traversal</a>
   </ul>
 </body>
 
