--- a/Courses/Wes Bos/Beginner Javascript/my-progress/033_etch-a-sketch/index.html
+++ b/Courses/Wes Bos/Beginner Javascript/my-progress/033_etch-a-sketch/index.html
@@ -5,12 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Etch A Sketch</title>
-  <link rel="stylesheet" href="./base.css">
   <link rel="stylesheet" href="./styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div id="etch-a-sketch">
+    <h1 class="title">Etch A Sketch</h1>
     <canvas width="1200" height="800" id="canvas"></canvas>
     <div class="buttons">
       <button class="btn-shake">Shake it up</button>
