--- a/Courses/Wes Bos/Beginner Javascript/my-progress/033_etch-a-sketch/index.html
+++ b/Courses/Wes Bos/Beginner Javascript/my-progress/033_etch-a-sketch/index.html
@@ -9,11 +9,14 @@
 </head>
 
 <body>
-  <p class="get-started active">Use the arrow keys to get started.</p>
+  <p class="get-started active">Use the arrow keys to get started. →↑↓←</p>
   <div id="etch-a-sketch">
     <h1 class="title">Etch A Sketch</h1>
     <canvas width="1200" height="800" id="canvas"></canvas>
-    <button class="btn-shake">Shake it up</button>
+    <div class="buttons">
+      <button class="btn-shake">Shake it up</button>
+      <button class="btn-party">Party mode!</button>
+    </div>
   </div>
 
   <script src="./script.js"></script>
