--- a/Courses/Wes Bos/css-grid/05 - CSS Grid Implicit vs Explicit Tracks/implicit-vs-explicit-FINISHED.html
+++ b/Courses/Wes Bos/css-grid/05 - CSS Grid Implicit vs Explicit Tracks/implicit-vs-explicit-FINISHED.html
@@ -4,17 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-  <style>
-    .container {
-      display: grid;
-      grid-template-columns: 300px auto 100px 100px;
-      grid-template-rows: 100px 300px 100px;
-      grid-gap: 10px;
-    }
-  </style>
+  <link rel="stylesheet" href="../assets/style.css">
+  <title>CSS Grid Implicit vs Explicit Grid Tracks!</title>
 </head>
 
 <body>
@@ -29,7 +20,20 @@
     <div class="item">8</div>
     <div class="item">9</div>
     <div class="item">10</div>
+    <div class="item">11</div>
+    <div class="item">12</div>
   </div>
+
+  <style>
+    .container {
+      display: grid;
+      grid-gap: 20px;
+      grid-template-columns: 200px 400px;
+      grid-template-rows: 50px 100px;
+      grid-auto-rows: 100px;
+      grid-auto-columns: 100px;
+    }
+  </style>
 </body>
 
 </html>
