refactor unicode generator

--- a/Experiments/unicode experiments/unicode image generator/terrain-height-map_giant.html
+++ b/Experiments/unicode experiments/unicode image generator/terrain-height-map_giant.html
@@ -11,8 +11,6 @@
       body { 
         min-width: 100vw;
         min-height: 100vh;
-        display: flex;
-        /* justify-content: center; */
         margin: 0; 
         background-color: black;
       }
@@ -36,11 +34,8 @@
       // Controls ====================================
       const MAXIMUM_WIDTH = 400;
       const MAXIMUM_HEIGHT = 400;
-      // const grayRamp = "WMXZOCxz|+-:. ";
-      // const grayRamp = "ⅢⅡⅠ⁝⁚ ";
-      // const grayRamp = "╳╳╳╲╲╲・・・　";
-      const grayRamp = "╳╳╲╲╲・・・　　　　";
-      const imageSource = './ascii-image-options/galaxyInverse4.jpg';
+      const grayRamp = "　　　　・・・╲╲╲╳╳";
+      const imageSource = './image-options/galaxy4.jpg';
 
       // Setup =======================================
       const canvas = document.querySelector("#imageCanvas");
