--- a/Courses/Wes Bos/css-grid/11 - Spanning and Placing Cardio/get-sweaty-START.html
+++ b/Courses/Wes Bos/css-grid/11 - Spanning and Placing Cardio/get-sweaty-START.html
@@ -86,7 +86,7 @@
 
     /* Make item 20 start at row 4 and go for 3 */
     .item20 {
-      grid-column: 4 / span 3;
+      grid-row: 4 / span 3;
     }
   </style>
 </body>
