--- a/Courses/Wes Bos/css-grid/19 - Nesting Grid with Album Layouts/albums-START.html
+++ b/Courses/Wes Bos/css-grid/19 - Nesting Grid with Album Layouts/albums-START.html
@@ -97,6 +97,23 @@
 
 
   <style>
+    .albums {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 25px;
+    }
+    .album {
+      display: grid;
+      grid-template-columns: 130px 1fr;
+      /* align-items: center; I prefer the default of `align-items: start;` */ 
+      gap: 18px;
+      padding: 18px;
+      background-color: hsla(0, 0%, 100%, 0.15);
+      box-shadow: 0 2px 8px -2px hsla(0, 0%, 0%, 0.2);
+    }
+    .album__artwork { width: 100%; }
+    .album__details * + * { margin-top: 8px; }
+    .album__artist { font-size: 1.1rem; }
   </style>
 </body>
 
