--- a/Courses/Wes Bos/css-grid/20 - CSS Grid Image Gallery/image-gallery-START.html
+++ b/Courses/Wes Bos/css-grid/20 - CSS Grid Image Gallery/image-gallery-START.html
@@ -11,15 +11,11 @@
 <body>
 
   <div class="overlay">
-    <div class="overlay-inner">
-      <button class="close">× Close</button>
-      <img>
-    </div>
+    <button class="close">× Close</button>
+    <img>
   </div>
 
-  <section class="gallery">
-  </section>
-
+  <section class="gallery"></section>
 
   <style>
     * {
@@ -29,59 +25,99 @@
     body {
       padding: 50px;
       font-family: sans-serif;
-      background: linear-gradient(to right, #F93D66, #6D47D9);
+      background: black;
     }
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      margin: 0 0 5px 0;
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+      grid-auto-rows: minmax(100px, 1fr);
+      grid-auto-flow: dense;
+      gap: 4px;
+      border-radius: 30px;
+      overflow: hidden;
     }
 
-    p {
-      margin: 0 0 20px 0;
+    .image {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+      cursor: pointer;
     }
-
-    .close {
-      background: none;
-      color: white;
-      border: 0;
-    }
-
-    .gallery {}
-
-
 
     .overlay {
       position: fixed;
-      background: rgba(0, 0, 0, 0.7);
+      background: rgba(0, 0, 0, 0.9);
       top: 0;
       right: 0;
       bottom: 0;
       left: 0;
       display: none;
       z-index: 2;
+      padding: 60px;
     }
 
     .overlay.open {
       display: grid;
+      align-items: center;
+      justify-content: center;
+      overflow-y: auto;
     }
 
-    .overlay figure {
-      background: white;
-      width: 700px;
-      padding: 20px;
+    .close {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      padding: 8px 12px;
+      background: none;
+      color: white;
+      border: 0;
+      cursor: pointer;
     }
 
     .overlay img {
-      width: 100%;
+      max-width: 50vw;
+      border-radius: 15px;
     }
   </style>
 
   <script>
+    const gallery = document.querySelector('.gallery');
+    const overlay = document.querySelector('.overlay');
+    const overlayImg = overlay.querySelector('img');
+    const closeBtn = overlay.querySelector('.close');
+
+    const genNumber = () => Math.ceil(Math.random() * 4);
+
+    const genDimensions = () => {
+      if (Math.random() < 0.80) {return [1,1]};
+      return [genNumber(), genNumber()];
+    };
+
+    const genImage = ([width, height]) => {
+      return `
+        <img
+          class="image"
+          style="grid-column: span ${width}; grid-row: span ${height};"
+          src="https://source.unsplash.com/user/draufsicht/${800+genNumber()}x${800+genNumber()}?v=10"
+        >
+      `;
+    };
+
+    for (let i = 0; i < 300; i++) {
+      gallery.insertAdjacentHTML('beforeend', genImage(genDimensions()));
+    }
+
+    gallery.addEventListener('click', (e) => {
+      console.log(e.target.currentSrc);
+      overlayImg.src = e.target.currentSrc;
+      overlay.classList.add('open');
+    });
+
+    closeBtn.addEventListener('click', () => {
+      overlay.classList.remove('open');
+    })
   </script>
 </body>
 
