--- a/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/006_merging-basics_01/index.html
+++ b/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/006_merging-basics_01/index.html
@@ -1,14 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@200;300;400&family=IBM+Plex+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+  <nav>
+    <p>A WebGL experiment / Zac Remboldt</p>
+  </nav>
+  <div class="container__primary-content">
+    <header>
+      <h3 class='interstellar-colonies-title'>United Interstellar Colonies</h3>
+      <h1>Cataluna System</h1>
+    </header>
+    <main>
+      <article class="tile">
+        <div class="image-container">
+          <img src="https://picsum.photos/id/101/560/372" alt="">
+          <span class="font-mono">3121 / Sol 23</span>
+        </div>
+        <div class="text-container">
+          <h2>Ares 3 launch</h2>
+          <p>If the oxygenator breaks down, I’ll suffocate. If the water reclaimer breaks down, I’ll die of thirst. If the Hab breaches, I’ll just kind of explode. If none of those things happen, I’ll eventually run out of food and starve to death. So yeah. I’m toast.</p>
+        </div>
+      </article>
+
+      <article class="tile">
+        <div class="image-container">
+          <img src="https://picsum.photos/id/101/560/372" alt="">
+          <span class="font-mono">3121 / Sol 23</span>
+        </div>
+        <div class="text-container">
+          <h2>Ares 3 launch</h2>
+          <p>If the oxygenator breaks down, I’ll suffocate. If the water reclaimer breaks down, I’ll die of thirst. If the Hab breaches, I’ll just kind of explode. If none of those things happen, I’ll eventually run out of food and starve to death. So yeah. I’m toast.</p>
+        </div>
+      </article>
+
+      <article class="tile">
+        <div class="image-container">
+          <img src="https://picsum.photos/id/101/560/372" alt="">
+          <span class="font-mono">3121 / Sol 23</span>
+        </div>
+        <div class="text-container">
+          <h2>Ares 3 launch</h2>
+          <p>If the oxygenator breaks down, I’ll suffocate. If the water reclaimer breaks down, I’ll die of thirst. If the Hab breaches, I’ll just kind of explode. If none of those things happen, I’ll eventually run out of food and starve to death. So yeah. I’m toast.</p>
+        </div>
+      </article>
+    </main>
+  </div>
+
   <div id="container"></div>
   <script src="js/app.js"></script>
 </body>
+
 </html>
