Created the Cataluna System mock page

--- a/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/006_merging-basics_01/index.html
+++ b/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/006_merging-basics_01/index.html
@@ -14,51 +14,24 @@
 
 <body>
   <nav>
-    <p>A WebGL experiment / Zac Remboldt</p>
+    <p class="font-mono">A WebGL experiment / Zac Remboldt</p>
   </nav>
   <div class="container__primary-content">
     <header>
-      <h3 class='interstellar-colonies-title'>United Interstellar Colonies</h3>
+      <div class="uic-container">
+        <img class='red-star' src="images/red-star.svg" alt="">
+        <h3 class='interstellar-colonies-title'>United Interstellar Colonies</h3>
+      </div>
       <h1>Cataluna System</h1>
     </header>
     <main>
-      <article class="tile">
-        <div class="image-container">
-          <img src="https://picsum.photos/id/101/560/372" alt="">
-          <span class="font-mono">3121 / Sol 23</span>
-        </div>
-        <div class="text-container">
-          <h2>Ares 3 launch</h2>
-          <p>If the oxygenator breaks down, I’ll suffocate. If the water reclaimer breaks down, I’ll die of thirst. If the Hab breaches, I’ll just kind of explode. If none of those things happen, I’ll eventually run out of food and starve to death. So yeah. I’m toast.</p>
-        </div>
-      </article>
-
-      <article class="tile">
-        <div class="image-container">
-          <img src="https://picsum.photos/id/101/560/372" alt="">
-          <span class="font-mono">3121 / Sol 23</span>
-        </div>
-        <div class="text-container">
-          <h2>Ares 3 launch</h2>
-          <p>If the oxygenator breaks down, I’ll suffocate. If the water reclaimer breaks down, I’ll die of thirst. If the Hab breaches, I’ll just kind of explode. If none of those things happen, I’ll eventually run out of food and starve to death. So yeah. I’m toast.</p>
-        </div>
-      </article>
-
-      <article class="tile">
-        <div class="image-container">
-          <img src="https://picsum.photos/id/101/560/372" alt="">
-          <span class="font-mono">3121 / Sol 23</span>
-        </div>
-        <div class="text-container">
-          <h2>Ares 3 launch</h2>
-          <p>If the oxygenator breaks down, I’ll suffocate. If the water reclaimer breaks down, I’ll die of thirst. If the Hab breaches, I’ll just kind of explode. If none of those things happen, I’ll eventually run out of food and starve to death. So yeah. I’m toast.</p>
-        </div>
-      </article>
+      <!-- JS generates content here -->
     </main>
   </div>
 
-  <div id="container"></div>
-  <script src="js/app.js"></script>
+  <script src="js/generate-elements.js"></script>
+  <!-- <div id="container"></div>
+  <script src="js/app.js"></script> -->
 </body>
 
 </html>
