--- a/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/006_merging-basics_03/index.html
+++ b/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/006_merging-basics_03/index.html
@@ -47,16 +47,18 @@
     </div>
   </nav>
 
-  <main class="wrap">
-    <header>
-      <div class="container_uic">
-        <img class='red-star' src="images/red-star.svg" alt="">
-        <h3 class='uic-title'>United Interstellar Colonies</h3>
+  <main>
+    <div data-scroll class="wrap">
+      <header>
+        <div class="container_uic">
+          <img class='red-star' src="images/red-star.svg" alt="">
+          <h3 class='uic-title'>United Interstellar Colonies</h3>
+        </div>
+        <h1>Cataluna System</h1>
+      </header>
+      <div class="container_articles">
+        <!-- JS generates content here -->
       </div>
-      <h1>Cataluna System</h1>
-    </header>
-    <div class="container_articles">
-      <!-- JS generates content here -->
     </div>
   </main>
 
