Setting up a raycaster

--- a/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/010_effects/index.html
+++ b/Courses/Yuri Artiukh/Merging WebGL and HTML worlds/010_effects/index.html
@@ -47,20 +47,22 @@
     </div>
   </nav>
 
-  <div class="wrap">
-    <header>
-      <div class="container_uic">
-        <img class='red-star' src="images/red-star.svg" alt="">
-        <h3 class='uic-title'>United Interstellar Colonies</h3>
+  <main>
+    <div data-scroll class="wrap">
+      <header>
+        <div class="container_uic">
+          <img class='red-star' src="images/red-star.svg" alt="">
+          <h3 class='uic-title'>United Interstellar Colonies</h3>
+        </div>
+        <h1>Cataluna System</h1>
+      </header>
+      <div class="container_articles">
+        <!-- JS generates content here -->
       </div>
-      <h1>Cataluna System</h1>
-    </header>
-    <main>
-      <!-- JS generates content here -->
-    </main>
-  </div>
+    </div>
+  </main>
 
-  <div id="webgl-container"></div>
+  <div id="container_webgl"></div>
 
   <script src="js/generate-elements.js"></script>
   <script src="js/functionality.js"></script>
