--- a/Courses/Yuri Artiukh/Creating a portfolio with WebGL/002_shader-boilerplate_not-class-based/index.html
+++ b/Courses/Yuri Artiukh/Creating a portfolio with WebGL/002_shader-boilerplate_not-class-based/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="container_webgl"></div>
-  <script src="./js/app.js"></script>
+  <script src="./js/app.js" type="module"></script>
 </body>
 
 </html>
