Wave Function Collapse is working!

--- a/Experiments/wave-function-collapse/all-in-one/index.html
+++ b/Experiments/wave-function-collapse/all-in-one/index.html
@@ -9,13 +9,20 @@
   <script src='model.js'></script>
   <script src='overlapping-model.js'></script>
     <style>
-      canvas{
-        border:1px solid black;
-        image-rendering: pixelated;}
+      body {
+        margin: 0;
+        height: 100vh;
+        display: grid;
+        place-items: center;
+      }
+      canvas {
+        border:2px solid black;
+        image-rendering: pixelated;
+      }  
     </style>
 </head>
 <body>
-  <canvas id="output" width="48" height="48"></canvas>
+  <canvas id="output"></canvas>
   <script src="script.js"></script>
 </body>
 </html>
