Finished layout class/workshop

--- a/Experiments/CodeSchool_CSS-Layout_9-2024/ramping-up-with-css-layout/index.html
+++ b/Experiments/CodeSchool_CSS-Layout_9-2024/ramping-up-with-css-layout/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="setup.css" />
     <link rel="stylesheet" href="layout-exercise.css" />
-    <title>Ramping up on CSS Layout</title>
+    <title>Ramping up with CSS Layout</title>
   </head>
   <body>
     <header>
